--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="address">
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -32,96 +32,96 @@
     <main>
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" class="button">Order Service</button>
         </section>
         <section>
             <h2>List of features</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <h3 class="list">Strategy</h3>
+                    <p class="list-p">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="list">Punctuality</h3>
+                    <p class="list-p">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <h3 class="list">Diligence</h3>
+                    <p class="list-p">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="list">Technologies</h3>
+                    <p class="list-p">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Our Team</h2>
+            <h2 class="team">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/men1.jpg" alt="Product Designer" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-people">Mark Guerrero</h3>
+                    <p class="team-profession">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/men2.jpg" alt="Frontend Developer" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-people">Tom Ford</h3>
+                    <p class="team-profession">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/girl3.jpg" alt="Marketing" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-people">Camila Garcia</h3>
+                    <p class="team-profession">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/men4.jpg" alt="UI Designer" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-people">Daniel Wilson</h3>
+                    <p class="team-profession">UI Designer</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h1>Our Portfolio</h1>
+            <h2 class="portfolio">Our Portfolio</h2>
             <ul>
                 <li>
-                    <img src="./images/img1.jpg" alt="Banking App">
-                    <h2>Banking App</h2>
+                    <img src="./images/img1.jpg" alt="Banking App" width="360px">
+                    <h3 class="portfolio-title">Banking App</h3>
                     <p>App</p>
                 </li>
                 <li>
-                    <img src="./images/img2.jpg" alt="Cashless Payment">
-                    <h2>Cashless Payment</h2>
-                    <p>Marketing</p>
+                    <img src="./images/img2.jpg" alt="Cashless Payment" width="360px">
+                    <h3 class="portfolio-title">Cashless Payment</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img3.jpg" alt="Meditation App">
-                    <h2>Meditation App</h2>
-                    <p>App</p>
+                    <img src="./images/img3.jpg" alt="Meditation App" width="360px">
+                    <h3 class="portfolio-title">Meditation App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
                 <li>
-                    <img src="./images/img4.jpg" alt="Taxi Service">
-                    <h2>Taxi Service</h2>
-                    <p>Marketing</p>
+                    <img src="./images/img4.jpg" alt="Taxi Service" width="360px">
+                    <h3 class="portfolio-title">Taxi Service</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img5.jpg" alt="Screen Illustrations">
-                    <h2>Screen Illustrations</h2>
-                    <p>Design</p>
+                    <img src="./images/img5.jpg" alt="Screen Illustrations" width="360px">
+                    <h3 class="portfolio-title">Screen Illustrations</h3>
+                    <p class="portfolio-text">Design</p>
                 </li>
                 <li>
                     <img src="./images/img6.jpg" alt="Online Courses">
-                    <h2>Online Courses</h2>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-title">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
+        <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
