--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="nav-logo">
             <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
             <ul class="nav">
-                <li><a href="">Studio</a></li>
+                <li><a href="./index.html">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="address">
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="telephone">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <section>
+        <section class="text-button">
             <h1>Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section>
-        <section>
+        <section class="list-of-featurs">
             <h2>List of features</h2>
             <ul>
                 <li>
@@ -59,32 +59,32 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="our-team">
             <h2 class="team">Our Team</h2>
             <ul>
-                <li>
+                <li class="foto">
                     <img src="./images/men1.jpg" alt="Product Designer" width="264">
                     <h3 class="team-people">Mark Guerrero</h3>
                     <p class="team-profession">Product Designer</p>
                 </li>
-                <li>
+                <li class="foto">
                     <img src="./images/men2.jpg" alt="Frontend Developer" width="264">
                     <h3 class="team-people">Tom Ford</h3>
                     <p class="team-profession">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="foto">
                     <img src="./images/girl3.jpg" alt="Marketing" width="264">
                     <h3 class="team-people">Camila Garcia</h3>
                     <p class="team-profession">Marketing</p>
                 </li>
-                <li>
+                <li class="foto">
                     <img src="./images/men4.jpg" alt="UI Designer" width="264">
                     <h3 class="team-people">Daniel Wilson</h3>
                     <p class="team-profession">UI Designer</p>
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="our-portfolio">
             <h2 class="portfolio">Our Portfolio</h2>
             <ul>
                 <li>
@@ -120,8 +120,8 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
+    <footer class="footer">
+        <a href="./index.html" class="logo">Web<span class="studio-footer">Studio</span></a>
         <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
