--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="nav-logo">
             <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
             <ul class="nav">
-                <li><a href="./index.html">Studio</a></li>
+                <li><a href="./index.html" class="studio-nav">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section class="text-button">
-            <h1>Effective Solutions for Your Business</h1>
+            <h1 class="text-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section>
         <section class="list-of-featurs">
