--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav class="nav-logo">
             <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
             <ul class="nav">
-                <li><a href="./index.html" class="studio-nav">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="./index.html" class="li-nav">Studio</a></li>
+                <li><a href="" class="li-nav">Portfolio</a></li>
+                <li><a href="" class="li-nav">Contacts</a></li>
             </ul>
         </nav>
         <address class="address">
@@ -89,33 +89,33 @@
             <ul>
                 <li>
                     <img src="./images/img1.jpg" alt="Banking App" width="360">
-                    <h3 class="portfolio-title">Banking App</h3>
+                    <h3 class="list-p">Banking App</h3>
                     <p>App</p>
                 </li>
                 <li>
                     <img src="./images/img2.jpg" alt="Cashless Payment" width="360">
                     <h3 class="portfolio-title">Cashless Payment</h3>
-                    <p class="portfolio-text">Marketing</p>
+                    <p class="list-p">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img3.jpg" alt="Meditation App" width="360">
                     <h3 class="portfolio-title">Meditation App</h3>
-                    <p class="portfolio-text">App</p>
+                    <p class="list-p">App</p>
                 </li>
                 <li>
                     <img src="./images/img4.jpg" alt="Taxi Service" width="360">
                     <h3 class="portfolio-title">Taxi Service</h3>
-                    <p class="portfolio-text">Marketing</p>
+                    <p class="list-p">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img5.jpg" alt="Screen Illustrations" width="360">
                     <h3 class="portfolio-title">Screen Illustrations</h3>
-                    <p class="portfolio-text">Design</p>
+                    <p class="list-p">Design</p>
                 </li>
                 <li>
                     <img src="./images/img6.jpg" alt="Online Courses" width="360">
                     <h3 class="portfolio-title">Online Courses</h3>
-                    <p class="portfolio-text">Marketing</p>
+                    <p class="list-p">Marketing</p>
                 </li>
             </ul>
         </section>
