--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </nav>
         <address class="address">
             <ul>
-                <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="telephone">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contact-address">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="contact-address">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -89,8 +89,8 @@
             <ul>
                 <li>
                     <img src="./images/img1.jpg" alt="Banking App" width="360">
-                    <h3 class="list-p">Banking App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-title">Banking App</h3>
+                    <p class="list-p">App</p>
                 </li>
                 <li>
                     <img src="./images/img2.jpg" alt="Cashless Payment" width="360">
